tests/neg-custom-args/captures/cc-existential-conformance.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:8:24 --------------------
8 |  val y: A -> Fun[B^] = x // error
  |                        ^
  |                        Found:    (x : A -> (x²: A) -> B^)
  |                        Required: A -> A -> B^²
  |
  |                        where:    ^  refers to a root capability associated with the result type of (x²: A): B^
  |                                  ^² refers to a fresh root capability in the type of value y
  |                                  x  is a value in method test
  |                                  x² is a reference to a value parameter
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:9:29 --------------------
9 |  val z: A -> (x: A) -> B^ = y // error
  |                             ^
  |                             Found:    A -> A -> B^{y*}
  |                             Required: A -> (x: A) -> B^
  |
  |                             where:    ^ refers to a root capability associated with the result type of (x: A): B^
  |
  |                             Note that the existential capture root in B^
  |                             cannot subsume the capability y* since that capability is not a `Sharable` capability
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:13:19 -------------------
13 |  val y: Fun[B^] = x // error
   |                   ^
   |                   Found:    (x : (x²: A) -> B^)
   |                   Required: A -> B^²
   |
   |                   where:    ^  refers to a root capability associated with the result type of (x²: A): B^
   |                             ^² refers to a fresh root capability in the type of value y
   |                             x  is a value in method test2
   |                             x² is a reference to a value parameter
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:14:24 -------------------
14 |  val z: (x: A) -> B^ = y // error
   |                        ^
   |                        Found:    A -> B^{y*}
   |                        Required: (x: A) -> B^
   |
   |                        where:    ^ refers to a root capability associated with the result type of (x: A): B^
   |
   |                        Note that the existential capture root in B^
   |                        cannot subsume the capability y* since that capability is not a `Sharable` capability
   |
   | longer explanation available when compiling with `-explain`
